--- a/admin/asset/css/style.css
+++ b/admin/asset/css/style.css
@@ -15,6 +15,10 @@ hr{
     opacity: 0.6;
 }
 
+table { 
+    border-collapse: collapse; 
+}
+
 /* nav */
 #nav {
     position: fixed;
@@ -56,14 +60,38 @@ hr{
     
 }
 
+#contain .ti-menu:hover .visible{
+    visibility: visible;
+}
+
 /* menu sidebar */
 #menu-sidebar{
     position: fixed;
+    visibility: hidden;
     width: 20%;
-    height: 625px;
+    height: 666px;
     background-color: #42424A;
     z-index: 2;
     text-align: center;
+    color: #c2c7d0;
+}
+
+#menu-sidebar .close-menu-sidebar{
+    position: absolute;
+    margin: 10px;
+    right: 0;
+    width: 20px;
+    line-height: 20px;
+    cursor: pointer;
+}
+#menu-sidebar .close-menu-sidebar:hover{
+    background-color: #686e78;
+    color: white;
+}
+
+#menu-sidebar a{
+    color: #c2c7d0;
+    text-decoration: none;
 }
 
 #menu-sidebar .avatar{
@@ -76,6 +104,45 @@ hr{
 
 #menu-sidebar .name-avatar{
     margin-top: 25px;
+}
+
+/* dashboard */
+#menu-sidebar .dashboard{
+    margin: 15px 0px 15px 8px;
+    border: 2px solid white;
+    border-radius: 4px;
+    background-color: white;
+    width: 90%;
+    text-transform: uppercase;
+    height: 32px;
+    cursor: pointer;
+}
+
+#menu-sidebar > .dashboard > a{
+    color: black;
+    opacity: 0.8;
+}
+
+#menu-sidebar .content-dashboard{
+    display: inline-block;
+}
+/* content */
+#menu-sidebar .content-menu-sidebar{
+    text-align: left;
+    display: inline-block;
+    margin: 8px 0px 8px 8px;
+    width: 90%;
+    height: 32px;
+    cursor: pointer;
+}
+
+#menu-sidebar .text-content-menu-sidebar{
+    margin-left: 10px;
+    display: inline-block;
+}
+
+#menu-sidebar .content-menu-sidebar:hover a{
+    color: white;
 }
 /* search */
 #menu-sidebar .search-menu{
@@ -100,5 +167,80 @@ hr{
 
 /* body contain */
 #body-contain{
-    height: 1000px;
+    padding: 15px;
+    color: black;
+}
+#body-contain .hello{
+    padding-top: 42px;
+}
+
+/* infomation */
+#infomation{
+    margin: 15px 0px 15px 0px;
+    display: flex;
+}
+
+#infomation .info{
+    display: flex;
+    width: 260px;
+    background-color: #fff;
+    border-radius: 15px;
+    margin: 15px 10px 0px 50px;
+}
+
+.info .icon-info{
+    margin: 25px;
+    padding: 5px;
+    color: white;
+    font-size: 80px;
+    background-color: #f79cb1;
+    border-radius: 12px;
+}
+
+.info .content-info{
+    text-align: center;
+    margin-top: 16px;
+    color: black;
+
+}
+
+.info .content-info h2{
+    font-size: 50px;
+}
+
+.info .content-info p{
+    opacity: 0.6;
+}
+
+/* table */
+#table-achive{
+    display: flex;
+    margin-top: 20px;
+}
+
+.table{
+    width: 50%;
+    background-color: white;
+    padding: 5px;
+    border-radius: 15px;
+}
+
+.table h2{
+    margin-left: 5px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #e5dfdf;
+}
+
+.table table{
+    width: 100%;
+}
+
+.table table tr{
+    padding: 5px;
+    border-bottom: 1px solid #e5dfdf;
+    text-align: center;
+}
+
+#selling-product{
+    margin-left: 15px;
 }
