update CRUD - Admin
update CRUD - Admin

--- a/admin/asset/css/change_password.css
+++ b/admin/asset/css/change_password.css
@@ -27,19 +27,6 @@ html{
     box-shadow: 0 0 20px 0 rgb(0 0 0 / 20%);
 }
 
-#remember{
-    width: 100%;
-    float: left;
-    display: flex;
-    margin: 10px 0px 10px 0px;
-    color: rgba(0,0,0,0.6);
-    flex-direction: row;
-}
-
-#remember:hover{
-    color: #000;
-}
-
 #input_checkbox {
     margin-top: 5px;
     margin-right: 5px;
@@ -56,18 +43,8 @@ html{
     font-size: 14px;
 }
 
-#password,
-#email{
+#password{
     position: relative;
-}
-
-#icon-email{
-    position: absolute;
-    right: -25px;
-    font-size: 18px;
-    top: 30px;
-    color: red;
-    visibility: hidden;
 }
 
 #icon-password{
@@ -91,7 +68,6 @@ html{
     opacity: 1;
 }
 
-#span-error-email,
 #span-error-password{
     float: left;
     text-align: justify;
@@ -114,16 +90,9 @@ html{
     margin-bottom: 30px;
 }
 
-.forgot_pw{
-    text-decoration: none;
-    opacity: 0.7;
-    color: blue;
-}
-
 .forgot_pw:hover{
     opacity: 1;
     text-decoration: underline;
-    color: blue;
 }
 
 /* error */
