--- a/admin/asset/css/forgot_password.css
+++ b/admin/asset/css/forgot_password.css
@@ -27,19 +27,6 @@ html{
     box-shadow: 0 0 20px 0 rgb(0 0 0 / 20%);
 }
 
-#remember{
-    width: 100%;
-    float: left;
-    display: flex;
-    margin: 10px 0px 10px 0px;
-    color: rgba(0,0,0,0.6);
-    flex-direction: row;
-}
-
-#remember:hover{
-    color: #000;
-}
-
 #input_checkbox {
     margin-top: 5px;
     margin-right: 5px;
@@ -56,7 +43,6 @@ html{
     font-size: 14px;
 }
 
-#password,
 #email{
     position: relative;
 }
@@ -66,15 +52,6 @@ html{
     right: -25px;
     font-size: 18px;
     top: 30px;
-    color: red;
-    visibility: hidden;
-}
-
-#icon-password{
-    position: absolute;
-    right: -25px;
-    font-size: 18px;
-    top: 40px;
     color: red;
     visibility: hidden;
 }
@@ -91,11 +68,10 @@ html{
     opacity: 1;
 }
 
-#span-error-email,
-#span-error-password{
+#span-error-email{
     float: left;
     text-align: justify;
-    font-size: 10px;
+    font-size: 13px;
     opacity: 0.5;
     margin-top: -10px;
     margin-bottom: 10px;
@@ -114,18 +90,6 @@ html{
     margin-bottom: 30px;
 }
 
-.forgot_pw{
-    text-decoration: none;
-    opacity: 0.7;
-    color: blue;
-}
-
-.forgot_pw:hover{
-    opacity: 1;
-    text-decoration: underline;
-    color: blue;
-}
-
 /* error */
 #error{
     display: flex;
@@ -140,8 +104,4 @@ html{
 
 #error p{
     
-}
-
-.success {
-    color: greenyellow !important;
 }
