--- a/admin/asset/css/notifi.css
+++ b/admin/asset/css/notifi.css
@@ -15,6 +15,7 @@
 #notifi .close{
     display: flex;
     color: red;
+    opacity: 0.6;
     margin: 15px 15px 0px 5px;
     background-color: rgba(255, 73, 73, 0.644);
     padding: 5px;
