--- a/products/product_page/product_detail/product_content.css
+++ b/products/product_page/product_detail/product_content.css
@@ -164,3 +164,36 @@
     border-top: none;
     padding: 40px;
 }
+
+
+.wrap_quantity {
+    padding-top: 10px;
+}
+
+#quantity {
+    font-size: 22px;
+    padding-left: 5px;
+}
+
+.wrap_button {
+    padding-top: 25px;
+}
+
+.button {
+    background-color: #4CAF50;
+    transition: background-color 50ms linear;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.button:active {
+    background-color: #347936;
+}
