--- a/products/product_page/product_detail/product_content.css
+++ b/products/product_page/product_detail/product_content.css
@@ -43,14 +43,14 @@
     text-align: left;
 }
 
-.main-content > .description > #descriptive_details > h2 {
+.main-content > .description > .tabcontent > h2 {
     padding-bottom: 30px;
 }
 
 .description > #table_desc > .table_description {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 40%;
+    width: 75%;
     margin-left: auto;
     margin-right: auto;
 }
