--- a/admin/asset/css/insert_products.css
+++ b/admin/asset/css/insert_products.css
@@ -8,7 +8,7 @@
 
 html{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: rgba(0, 0, 0, 0.4);
+    background: rgba(0, 0, 0, 0.4) !important;
 }
 
 .clear{
@@ -54,7 +54,9 @@ i.ti-pencil-alt{
     margin-top: 74px;
     display: flex;
     align-items: center;
-    justify-content: center; 
+    justify-content: center;
+    
+    background: rgba(0, 0, 0, 0.4) !important;
 }
 #container{
     position: relative;
@@ -199,4 +201,14 @@ i.ti-pencil-alt{
     margin-bottom: 10px;
     color: red;
     font-size: 20px;
+}
+
+/* tag */
+.tt-menu {
+    border-radius: 5px;
+    border: 1px solid #8d7272;
+    background-color: #fff;
+    color: black;
+    width: 200%;
+    box-shadow: 0px 0px 5px grey;
 }
